gcc/testsuite/rust/rustc/ui/parser/recover-from-homoglyph.rs
fn main() {
    println!(""); // { dg-error "" "" { target *-*-* } }
    let x: usize = (); // { dg-error ".E0308." "" { target *-*-* } }
}

